Rename HTML files for overall repo

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-book"></i></div>
             <div>
-              <h4 class="title"><a href="publication-details.html" class="stretched-link">學術發表</a></h4>
+              <h4 class="title"><a href="publications.html" class="stretched-link">學術發表</a></h4>
               <p class="description">學術發表涵蓋台灣新南向政策與東南亞語言人才培育、新住民子女語言現況與角色等主題。並在多場國際研討會上分享關於台灣原住民語言流失與復興、客家年輕世代語言活力與傳承等研究成果，為語言學與文化研究領域做出重要貢獻。<code>[點選了解]</code></p>
             </div>
           </div>
@@ -322,7 +322,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-people"></i></div>
             <div>
-              <h4 class="title"><a href="paticipation-details.html" class="stretched-link">學術參與</a></h4>
+              <h4 class="title"><a href="paticipations.html" class="stretched-link">學術參與</a></h4>
               <p class="description">除學術發表外，學術參與涵蓋擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等角色。這些經驗不僅強化其專業領域相關知識，也為後進學者提供了學術指導與建議，進一步推動學術社群的發展。<code>[點選了解]</code></p>
             </div>
           </div>
@@ -330,7 +330,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-box"></i></div>
             <div>
-              <h4 class="title"><a href="graduation-details.html" class="stretched-link">專題指導</a></h4>
+              <h4 class="title"><a href="graduation-projects.html" class="stretched-link">專題指導</a></h4>
               <p class="description">協助帶領學生們的畢業專題論文，例如台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
             </div>
           </div>
@@ -338,7 +338,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
-              <h4 class="title"><a href="project-details.html" class="stretched-link">研究計畫</a></h4>
+              <h4 class="title"><a href="research-projects.html" class="stretched-link">研究計畫</a></h4>
               <p class="description">主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
             </div>
           </div>
@@ -346,7 +346,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
             <div>
-              <h4 class="title"><a href="cooperation-details.html" class="stretched-link">產學合作</a></h4>
+              <h4 class="title"><a href="cooperations.html" class="stretched-link">產學合作</a></h4>
               <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
             </div>
           </div>
@@ -422,7 +422,7 @@
                     <h4>阿弟</h4>
                     <p>吉祥物 - 阿弟</p>
                   <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟 🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -434,7 +434,7 @@
                     <h4>地方創生</h4>
                     <p>楊真宜老師 - 地方創生 🌱✨</p>
                   <a href="assets/img/revitalizations/rev-01.jpg" title="楊真宜老師 - 地方創生 🌱✨" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="revitalization-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="revitalizations.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -458,7 +458,7 @@
                   <h4>Books 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -470,7 +470,7 @@
                   <h4>Books 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -482,7 +482,7 @@
                   <h4>Books 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div> -->
