--- a/graduation-projects.html
+++ b/graduation-projects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Academic Participations)</title>
+  <title>楊真宜 Chen-Yi Yang (Guidance on Graduation Projects)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -72,40 +72,40 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Academic Participations</h1>
+        <h1 class="mb-2 mb-lg-0">Guidance on Graduation Projects</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">學術參與</li>
+            <li class="current">專題指導</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Paticipation Details Section -->
+    <!-- Graduation Details Section -->
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
-              <img src="assets/img/academic/acad-3.jpg" alt="" class="img-fluid services-img">
-              <img src="assets/img/academic/acad-4.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/guides/guide-07.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/guides/guide-08.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
+
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3><i class="bi bi-people"></i> 學術參與 Academic Participation</h3>
+            <h3><i class="bi bi-mortarboard"></i> 畢業專題論文指導 Guidance on Graduation Projects</h3>
             <hr>
-            <h5>
-              (TBC)
-              <!-- 委員擔任、研討會評論人、期刊審查委員、PU研究生論文研討會主持人、畢業論文審查委員 -->
-            </h5>
             <ul>
-              <li><i class="bi bi-caret-right"></i> <span></span></li>
+              <li><i class="bi bi-caret-right"></i> <span>台灣北中南大學生台語的學習狀況和文化認同 | The learning status of Taiwanese language among university students in northern, central, and southern Taiwan and its connection to cultural identity | 2024</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>應用英語系大學生英文口說焦慮潛在成因探討 | The Exploration of Potential Factors Affecting English-Speaking Anxiety of College Students from the Department of Applied English | 2024</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>台灣新二代的語言保留與習得：比較日本、越南及印尼 | The Language Maintenance and Acquisition of New Immigrant Children in Taiwan: The Comparison of Japan, Vietnam, and Indonesia | 2023</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>越南新二代學習媽媽母語之語言態度調查 | A Study on Language Attitudes of the Vietnamese New Immigrant Children Learning New Immigrant Mother's Language | 2023</span></li> 
             </ul>
         </div>
       </div>
 
-    </section><!-- /Paticipation Details Section -->
+    </section><!-- /Graduation Details Section -->
 
   </main>
 
