--- a/graduation-projects.html
+++ b/graduation-projects.html
@@ -113,7 +113,7 @@
 
     <div class="container">
       <div class="copyright text-center">
-        <br><p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+        <br><p>© <span>Copyright</span> <strong class="px-1 sitename">Chen-Yi Yang, Ph.D.</strong> <span>All Rights Reserved.</span></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
