Revise text for overall repo (2)

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Name (E):</strong> <span>Karen Yang</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Office:</strong> <span>K602A</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>a91406587@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>chenyi@ncut.edu.tw</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>chen-yi-yang.github.io</span></li>
                 </ul>
               </div>
@@ -535,7 +535,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email</h3>
-                  <p>a91406587@gmail.com</p>
+                  <p>chenyi@ncut.edu.tw</p>
                 </div>
               </div><!-- End Info Item -->
 
