Rename with collaborations

--- a/collaborations.html
+++ b/collaborations.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Industry-university Cooperation Projects)</title>
+  <title>楊真宜 Chen-Yi Yang ( Industry-academia Collaboration Projects)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -72,7 +72,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Industry-university Cooperation Projects</h1>
+        <h1 class="mb-2 mb-lg-0">Industry-academia Collaboration Projects</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -82,18 +82,18 @@
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Cooperation Details Section -->
+    <!-- Collaborations Section -->
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
-              <img src="assets/img/cooperations/coop-1.jpg" alt="" class="img-fluid services-img">
-              <img src="assets/img/cooperations/coop-2.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/collaborations/coop-1.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/collaborations/coop-2.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3><i class="bi bi-arrow-repeat"></i> 產學合作計畫 Industry-university Cooperation Projects</h3>
+            <h3><i class="bi bi-arrow-repeat"></i> 產學合作計畫  Industry-academia Collaboration Projects</h3>
             <hr>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(互動美語北屯分公司) | 計畫主持人 | 台中市私立希伯崙文股份有限公司 | 2024 - 2025</span></li>
@@ -107,7 +107,7 @@
         </div>
       </div>
 
-    </section><!-- /Cooperation Details Section -->
+    </section><!-- /Collaborations Section -->
 
   </main>
 
