--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
             <div>
-              <h4 class="title"><a href="cooperations.html" class="stretched-link">產學合作</a></h4>
+              <h4 class="title"><a href="collaborations.html" class="stretched-link">產學合作</a></h4>
               <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
             </div>
           </div>
