Add new photo for works

--- a/work-experiences.html
+++ b/work-experiences.html
@@ -91,6 +91,7 @@
               <img src="assets/img/works/works-1.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/works/works-2.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/works/works-3.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/works/works-4.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
 
