Fix for the Home URLs

--- a/licenses-certificates.html
+++ b/licenses-certificates.html
@@ -74,7 +74,7 @@
         <h1 class="mb-2 mb-lg-0">Licenses & Certificates</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/#showcase">Home</a></li>
             <li class="current">證照&證書</li>
           </ol>
         </nav>
