--- a/work-experiences.html
+++ b/work-experiences.html
@@ -75,7 +75,7 @@
         <h1 class="mb-2 mb-lg-0">Work Experiences</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/#achievements">Home</a></li>
             <li class="current">工作經歷</li>
           </ol>
         </nav>
