--- a/collaborations.html
+++ b/collaborations.html
@@ -75,7 +75,7 @@
         <h1 class="mb-2 mb-lg-0">Industry-academia Collaboration Projects</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/#achievements">Home</a></li>
             <li class="current">產學合作</li>
           </ol>
         </nav>
