--- a/competitions.html
+++ b/competitions.html
@@ -74,7 +74,7 @@
         <h1 class="mb-2 mb-lg-0">Guidance on Competitions</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/#showcase">Home</a></li>
             <li class="current">競賽指導</li>
           </ol>
         </nav>
