--- a/graduation-projects.html
+++ b/graduation-projects.html
@@ -75,7 +75,7 @@
         <h1 class="mb-2 mb-lg-0">Guidance on Graduation Projects</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/#achievements">Home</a></li>
             <li class="current">專題指導</li>
           </ol>
         </nav>
