--- a/participations.html
+++ b/participations.html
@@ -75,7 +75,7 @@
         <h1 class="mb-2 mb-lg-0">Academic Participations</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/#achievements">Home</a></li>
             <li class="current">學術參與</li>
           </ol>
         </nav>
