Add new photo for participations

--- a/participations.html
+++ b/participations.html
@@ -95,12 +95,42 @@
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <h3><i class="bi bi-people"></i> 學術參與 Academic Participations</h3>
             <hr>
-            <h5>
-              (TBC)
-              <!-- 委員擔任、研討會評論人、期刊審查委員、PU研究生論文研討會主持人、畢業論文審查委員 -->
-            </h5>
+            <h5>審查/審稿/口試委員</h5>
             <ul>
-              <li><i class="bi bi-caret-right"></i> <span></span></li>
+              <li><i class="bi bi-caret-right"></i> <span>第五屆台灣創新發明教育學會年會暨國際研討會及第二十二屆管理學術研討會 | 審稿委員 | 2024.12</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系111學年度畢業專題發表會 | 外審委員 | 2023.05</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111學年度實務專題口試 | 口試委員 | 2023.01</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>台灣語言文學研究學術期刊《台灣語文研究》| 台灣語文學會 | 審查委員</span></li>
+            </ul>
+
+            <h5>主持人/評論人</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> <span>第十五屆台灣語言及其教學國際學術研討會 | 主持人&評論人 | 2024.11</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>第六屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2024.09</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系113學年度研究生論文發表會 | 主持人 | 2024.06</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>第五屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2023.09</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>第二屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2020.09</span></li>
+            </ul>
+
+            <h5>客座講師/主講人/與談人</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學《The Past and Present of Taiwanese Languages 台灣語言的前世與今生》| 客座講師 | 2024.04</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學112學年度統整計畫講座《田野調查與訪談：理論與實作的距離》| 主講人 | 2023.10</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學 TEEP@AsiaPlus Invited Speech《A Sociolinguistic Description of Language Change in Taiwan》| 客座講師 | 2020.05</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>台灣教育研究學會《2019台灣教育學術研討會—跨域、跨界的教育新契機》【教育創新與社會創新(二)】| 與談人 | 2019.11</span></li>
+            </ul>
+
+            <h5>活動主辦人</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112學年度英語微電影比賽 | 主辦人 | 2024.01</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112學年度英語歌唱競賽 | 主辦人 | 2023.05</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111學年度科技商用英語演講競賽 | 主辦人 | 2022.10</span></li>
+            </ul>
+
+            <h5>研習課程</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> <span>教育部iLink人文社會與產業實務創新鏈結計畫「iLink計畫．雲端講堂」| 研習 | 2023.06</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>教育部iLink人文社會與產業實務創新鏈結計畫「第一期徵件培力工作坊」| 研習 | 2023.05</span></li>
             </ul>
         </div>
       </div>
