--- a/competitions.html
+++ b/competitions.html
@@ -132,8 +132,9 @@
                 <li><strong>📅 拍攝日期</strong>：2024.11.13</li>
                 <li><strong>🏫 學校名稱</strong>：國立勤益科技大學</li>
                 <li><strong>👨‍🏫 指導老師</strong>：<strong><a href="#">楊真宜</a></strong> 助理教授</li>
-                <li><strong>🏆 競賽結果</strong>：✨ <strong><a href="#">獲選優勝 & 佳作</a></strong> ✨</li>
-                <li><strong>🔗 影片網址</strong>：📹 <a href="https://www.facebook.com/61550050917478/videos/554243197204450" target="_blank">CLICK HERE</a> 📹</li><hr>
+                <li><strong>🏆 競賽結果</strong>：<strong><a href="#">獲選優勝 & 佳作</a></strong></li>
+                <li><strong>🔗 影片網址</strong>：📹 <a href="https://www.facebook.com/61550050917478/videos/554243197204450" target="_blank">CLICK HERE</a> 📹</li>
+                <li>✨ <code>(帶領共四組報名參賽 >> 全數入圍決賽)</code> ✨</li><hr>
                 <li>📢 今天為大家介紹 112年度 <a href="#">#大專組優勝</a> 的另一支隊伍提案「鐵骨柔情-響遍太平」。來自 #勤益科大 的同學們以台中市太平區鐵工產業為核心，期望以嶄新的創意方案推廣當地的鐵工藝術與文化特色。</li>
                 <li><iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F61550050917478%2Fvideos%2F554243197204450&appId=685790705411334" width="100%" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe></li>
               </ul>
