Add content for participations

--- a/participations.html
+++ b/participations.html
@@ -97,10 +97,11 @@
             <hr>
             <h5>審查/審稿/口試委員</h5>
             <ul>
+              <li><i class="bi bi-caret-right"></i> <span>台灣語言文學研究學術期刊《台灣語文研究》| 台灣語文學會 | 審查委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112學年度實務專題 | 口試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111學年度實務專題 | 口試委員</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第五屆台灣創新發明教育學會年會暨國際研討會及第二十二屆管理學術研討會 | 審稿委員 | 2024.12</span></li>
               <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系111學年度畢業專題發表會 | 外審委員 | 2023.05</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111學年度實務專題口試 | 口試委員 | 2023.01</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>台灣語言文學研究學術期刊《台灣語文研究》| 台灣語文學會 | 審查委員</span></li>
             </ul>
 
             <h5>主持人/評論人</h5>
@@ -129,8 +130,25 @@
 
             <h5>研習課程</h5>
             <ul>
+              <li><i class="bi bi-caret-right"></i> <span>技專校院招生專業化總辦公室「全國技專技高108課綱學習歷程檔案交流座談會」| 研習 | 2023.12</span></li>
               <li><i class="bi bi-caret-right"></i> <span>教育部iLink人文社會與產業實務創新鏈結計畫「iLink計畫．雲端講堂」| 研習 | 2023.06</span></li>
               <li><i class="bi bi-caret-right"></i> <span>教育部iLink人文社會與產業實務創新鏈結計畫「第一期徵件培力工作坊」| 研習 | 2023.05</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>合興窯業工廠 | 專業實務研習 | 2022.09</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>卓也小屋 | 專業實務研習 | 2022.09</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>華氏七七餐飲 | 專業實務研習 | 2022.09</span></li>
+            </ul>
+
+            <h5>甄試/招生委員</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學114年應用英語系推薦甄試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學114年應用英語系技優甄試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學114年應用英語系轉學考招生委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學113年應用英語系推薦甄試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學113年應用英語系技優甄試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學113年應用英語系轉學考招生委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學112年應用英語系推薦甄試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學112年應用英語系技優甄試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學112年應用英語系轉學考招生委員</span></li>
             </ul>
         </div>
       </div>
