Revise content for participations

--- a/participations.html
+++ b/participations.html
@@ -104,11 +104,11 @@
               <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系111學年度畢業專題發表會 | 外審委員 | 2023.05</span></li>
             </ul>
 
-            <h5>主持人/評論人</h5>
+            <h5>研討會主持人/評論人</h5>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span>第十五屆台灣語言及其教學國際學術研討會 | 主持人&評論人 | 2024.11</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第六屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2024.09</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系113學年度研究生論文發表會 | 主持人 | 2024.06</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系113學年度研究生論文研討會 | 主持人 | 2024.06</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第五屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2023.09</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第二屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2020.09</span></li>
             </ul>
