Revise photos for overall repo

--- a/publications.html
+++ b/publications.html
@@ -90,6 +90,8 @@
             <div class="services-list">
               <img src="assets/img/academic/acad-1.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/academic/acad-2.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/academic/acad-3.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/academic/acad-4.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
