--- a/research-projects.html
+++ b/research-projects.html
@@ -89,6 +89,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
               <img src="assets/img/projects/project-1.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/projects/project-2.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/projects/poster-1.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
