--- a/revitalizations.html
+++ b/revitalizations.html
@@ -121,6 +121,21 @@
                   <img src="assets/img/revitalizations/rev-03.jpg" alt="">
                 </div>
 
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-04.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-05.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-06.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-07.jpg" alt="">
+                </div>
               </div>
             </div>
           </div>
