Add content for mylife

--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
             <li data-filter=".filter-revitalizations">地方創生</li>
             <li data-filter=".filter-licenses-certificates">證照/證書</li>
             <li data-filter=".filter-patents-awards">專利/獎項</li>
+            <li data-filter=".filter-mylife">生活🏡</li>
             <li data-filter=".filter-dog">阿弟🐾</li>
           </ul>
 
@@ -420,7 +421,7 @@
                 <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                     <h4>阿弟</h4>
-                    <p>吉祥物 - 阿弟</p>
+                    <p>吉祥物 - 阿弟🐶</p>
                   <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟 🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -451,18 +452,19 @@
               </div>
             </div>
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mylife">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/mylife/mylife-01.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Books 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>生活🏡</h4>
+                  <p>楊真宜老師 - 生活🏡</p>
+                  <a href="assets/img/mylife/mylife-01.jpg" title="楊真宜老師 - 生活🏡" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="mylife-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
 
+            <!-- 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
