--- a/index.html
+++ b/index.html
@@ -311,6 +311,22 @@
 
         <div class="row gy-4">
 
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
+            <div>
+              <h4 class="title"><a href="research-projects.html" class="stretched-link">研究計畫</a></h4>
+              <p class="description">主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
+            <div>
+              <h4 class="title"><a href="collaborations.html" class="stretched-link">產學合作</a></h4>
+              <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-book"></i></div>
             <div>
@@ -332,22 +348,6 @@
             <div>
               <h4 class="title"><a href="graduation-projects.html" class="stretched-link">專題指導</a></h4>
               <p class="description">協助帶領學生們的畢業專題論文，例如台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
-            <div>
-              <h4 class="title"><a href="research-projects.html" class="stretched-link">研究計畫</a></h4>
-              <p class="description">主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
-            <div>
-              <h4 class="title"><a href="collaborations.html" class="stretched-link">產學合作</a></h4>
-              <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -421,8 +421,8 @@
                 <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                     <h4>阿弟</h4>
-                    <p>吉祥物 - 阿弟🐶</p>
-                  <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟 🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <p>吉祥物 - 阿弟🐶🐾</p>
+                  <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -433,8 +433,8 @@
                 <img src="assets/img/revitalizations/rev-01.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                     <h4>地方創生</h4>
-                    <p>楊真宜老師 - 地方創生 🌱✨</p>
-                  <a href="assets/img/revitalizations/rev-01.jpg" title="楊真宜老師 - 地方創生 🌱✨" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <p>楊真宜老師 - 地方創生🌱✨</p>
+                  <a href="assets/img/revitalizations/rev-01.jpg" title="楊真宜老師 - 地方創生🌱✨" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="revitalizations.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
