Revise content for overall repo

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
               <h4 class="title"><a href="research-projects.html" class="stretched-link">研究計畫</a></h4>
-              <p class="description">主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
+              <p class="description">過往主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -323,7 +323,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
             <div>
               <h4 class="title"><a href="collaborations.html" class="stretched-link">產學合作</a></h4>
-              <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
+              <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等機構，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -355,7 +355,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
             <div>
               <h4 class="title"><a href="work-experiences.html" class="stretched-link">工作經歷</a></h4>
-              <p class="description">曾於各大學擔任教職與研究職位，包括國立清華大學、中山大學、彰化師範大學、高雄科技大學等。職責涵蓋科學教育計畫之規劃、智慧城鄉創生研究、英語教學，以及社區記憶與創新轉型等領域，展現其在教育與研究上的多元專業。<code>[點選了解]</code></p>
+              <p class="description">曾經於各大學擔任教職與研究員職位，包括國立清華大學、中山大學、彰化師範大學、高雄科技大學等。職責涵蓋科學教育計畫之規劃、智慧城鄉創生研究、英語教學，以及社區記憶與創新轉型等領域，展現其在教育與研究上的多元專業。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -371,7 +371,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>展示 Showcase</h2>
-        <p>專業領域與個人生活中的多元成果，從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟 Karen 在學術與實務並進的旅程、以及對於教育與研究的熱情。</p>
+        <p>專業領域與個人生活中的多元成果，從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟Karen在學術與實務並進的旅程、以及對於教育與研究的熱情。</p>
         <br>
       </div><!-- End Section Title -->
 
