--- a/mylife-details.html
+++ b/mylife-details.html
@@ -144,7 +144,12 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>My Life🏡</h3>
               <ul>
-                <!-- <li><i class="bi bi-house"></i> </li> -->
+                <li><i class="bi bi-house"></i> 夏威夷訪問學者期間<br>During the visiting scholar period in Hawaii</li>
+                <li><i class="bi bi-house"></i> 西班牙畢卡索博物館<br>Picasso Museum in Spain</li>
+                <li><i class="bi bi-house"></i> 義大利威尼斯旅遊<br>Traveling in Venice, Italy</li>
+                <li><i class="bi bi-house"></i> 義大利維洛納旅遊<br>Traveling in Verona, Italy</li>
+                <li><i class="bi bi-house"></i> 夏威夷海灘<br>Hawaiian beaches</li>
+                <li><i class="bi bi-house"></i> 義大利威尼斯二手書店<br>Second-hand bookstore in Venice, Italy</li>
               </ul>
             </div>
           </div>
