--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <li data-filter=".filter-revitalizations">地方創生</li>
             <li data-filter=".filter-licenses-certificates">證照/證書</li>
             <li data-filter=".filter-patents-awards">專利/獎項</li>
-            <li data-filter=".filter-mylife">生活🏡</li>
+            <li data-filter=".filter-mylife">生活🌎</li>
             <li data-filter=".filter-dog">阿弟🐾</li>
           </ul>
 
@@ -456,9 +456,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/mylife/mylife-01.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>生活🏡</h4>
-                  <p>楊真宜老師 - 生活🏡</p>
-                  <a href="assets/img/mylife/mylife-01.jpg" title="楊真宜老師 - 生活🏡" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <h4>生活🌎</h4>
+                  <p>楊真宜老師 - 生活🌎</p>
+                  <a href="assets/img/mylife/mylife-01.jpg" title="楊真宜老師 - 生活🌎" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="mylife-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
