--- a/mylife-details.html
+++ b/mylife-details.html
@@ -71,11 +71,11 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">My Life🏡</h1>
+        <h1 class="mb-2 mb-lg-0">My Life🌎</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="/#showcase">Home</a></li>
-            <li class="current">生活🏡</li>
+            <li class="current">生活🌎</li>
           </ol>
         </nav>
       </div>
@@ -142,7 +142,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>My Life🏡</h3>
+              <h3>My Life🌎</h3>
               <ul>
                 <li><i class="bi bi-airplane"></i> 夏威夷訪問學者期間<br>During the visiting scholar period in Hawaii</li>
                 <li><i class="bi bi-airplane"></i> 西班牙畢卡索博物館<br>Picasso Museum in Spain</li>
@@ -150,6 +150,7 @@
                 <li><i class="bi bi-airplane"></i> 義大利維洛納旅遊<br>Traveling in Verona, Italy</li>
                 <li><i class="bi bi-airplane"></i> 夏威夷海灘<br>Hawaiian beaches</li>
                 <li><i class="bi bi-airplane"></i> 義大利威尼斯二手書店<br>Second-hand bookstore in Venice, Italy</li>
+                <li><i class="bi bi-airplane"></i> 西子灣騎單車<br>Cycling in Xiziwan</li>
               </ul>
             </div>
           </div>
