Fix typo for mylife part

--- a/mylife-details.html
+++ b/mylife-details.html
@@ -150,7 +150,7 @@
                 <li><i class="bi bi-airplane"></i> 義大利維洛納旅遊<br>Traveling in Verona, Italy</li>
                 <li><i class="bi bi-airplane"></i> 夏威夷海灘<br>Hawaiian beaches</li>
                 <li><i class="bi bi-airplane"></i> 義大利威尼斯二手書店<br>Second-hand bookstore in Venice, Italy</li>
-                <li><i class="bi bi-airplane"></i> 西子灣騎單車<br>Cycling in Xiziwan</li>
+                <li><i class="bi bi-airplane"></i> 西子灣騎單車<br>Bicycling in Sizihwan</li>
               </ul>
             </div>
           </div>
