Adjust icons & photo sizes

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>展示 Showcase</h2>
-        <p>專業領域與個人生活中的多元成果，從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟Karen在學術與實務並進的旅程、以及對於教育與研究的熱情。</p>
+        <p>專業領域與個人生活中的多元成果，從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟Karen在學術與實務並進的旅程、以及對於教育與研究的熱情。🖱️<code>點選各圖上方 <i class="bi bi-caret-right-square"></i> 可瀏覽內容</code>🖱️</p>
         <br>
       </div><!-- End Section Title -->
 
@@ -399,7 +399,7 @@
                   <h4>競賽指導</h4>
                   <p>《全國人文社會永續行動創新應用競賽》<br>✨ 獲選優勝&佳作 ✨</p>
                   <a href="assets/img/guides/guide-zoom.jpg" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🏆 獲選優勝&佳作 🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="competitions.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="competitions.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div>
@@ -411,7 +411,7 @@
                     <h4>證照/證書</h4>
                     <p>楊真宜老師 - 證照/證書📜</p>
                   <a href="assets/img/licenses/AIL-expert.png" title="楊真宜老師 - 證照/證書📜" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="licenses-certificates.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="licenses-certificates.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div>
@@ -423,7 +423,7 @@
                     <h4>阿弟</h4>
                     <p>吉祥物 - 阿弟🐶🐾</p>
                   <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div>
@@ -435,7 +435,7 @@
                     <h4>地方創生</h4>
                     <p>楊真宜老師 - 地方創生🌱✨</p>
                   <a href="assets/img/revitalizations/rev-01.jpg" title="楊真宜老師 - 地方創生🌱✨" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="revitalizations.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="revitalizations.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div>
@@ -447,7 +447,7 @@
                   <h4>專利/獎項</h4>
                     <p>楊真宜老師 - 專利/獎項🏆🏅</p>
                   <a href="assets/img/patents/PAT-M657972.png" title="楊真宜老師 - 專利/獎項🏆🏅" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="patents-awards.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="patents-awards.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div>
@@ -459,7 +459,7 @@
                   <h4>生活🌎</h4>
                   <p>楊真宜老師 - 生活🌎</p>
                   <a href="assets/img/mylife/mylife-01.jpg" title="楊真宜老師 - 生活🌎" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="mylife-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="mylife-details.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div>
@@ -472,7 +472,7 @@
                   <h4>Books 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div>
@@ -484,7 +484,7 @@
                   <h4>Books 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div> -->
