--- a/licenses-certificates.html
+++ b/licenses-certificates.html
@@ -109,8 +109,8 @@
 
               <div class="swiper-pagination"></div>
               <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="assets/img/licenses/TKT-Module2.png" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/licenses/TKT-Module2.png" alt="" style="width: 60%; height: 60%;">
                 </div>
 
                 <div class="swiper-slide">
@@ -121,8 +121,8 @@
                   <img src="assets/img/licenses/AIL-fundamental.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/certificates/Secondary-School-Teacher.png" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/certificates/Secondary-School-Teacher.png" alt="" style="width: 60%; height: 60%;">
                 </div>
 
                 <div class="swiper-slide">
@@ -133,7 +133,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4"><br><br>
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Licenses & Certificates</h3>
               <ul>
