--- a/mylife-details.html
+++ b/mylife-details.html
@@ -121,16 +121,16 @@
                   <img src="assets/img/mylife/mylife-03.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/mylife/mylife-04.jpg" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/mylife/mylife-04.jpg" alt="" style="width: 60%; height: 60%;">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/mylife/mylife-05.jpg" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/mylife/mylife-05.jpg" alt="" style="width: 60%; height: 60%;">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/mylife/mylife-06.jpg" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/mylife/mylife-06.jpg" alt="" style="width: 60%; height: 60%;">
                 </div>
 
                 <div class="swiper-slide">
@@ -146,8 +146,8 @@
               <ul>
                 <li><i class="bi bi-airplane"></i> 夏威夷訪問學者期間<br>During the visiting scholar period in Hawaii</li>
                 <li><i class="bi bi-airplane"></i> 西班牙畢卡索博物館<br>Picasso Museum in Spain</li>
-                <li><i class="bi bi-airplane"></i> 義大利威尼斯旅遊<br>Traveling in Venice, Italy</li>
                 <li><i class="bi bi-airplane"></i> 義大利維洛納旅遊<br>Traveling in Verona, Italy</li>
+                <li><i class="bi bi-airplane"></i> 義大利威尼斯旅遊<br>Traveling in Venice, Italy</li>
                 <li><i class="bi bi-airplane"></i> 夏威夷海灘<br>Hawaiian beaches</li>
                 <li><i class="bi bi-airplane"></i> 義大利威尼斯二手書店<br>Second-hand bookstore in Venice, Italy</li>
                 <li><i class="bi bi-airplane"></i> 西子灣騎單車<br>Bicycling in Sizihwan</li>
