--- a/competitions.html
+++ b/competitions.html
@@ -117,10 +117,18 @@
                 <div class="swiper-slide"><img src="assets/img/guides/guide-04.jpg" alt=""></div>
                 <div class="swiper-slide"><img src="assets/img/guides/guide-05.jpg" alt=""></div>
                 <div class="swiper-slide"><img src="assets/img/guides/guide-06.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="assets/img/guides/guide-award-01.png" alt=""></div>
-                <div class="swiper-slide"><img src="assets/img/guides/guide-award-02.png" alt=""></div>
-                <div class="swiper-slide"><img src="assets/img/guides/guide-award-03.png" alt=""></div>
-                <div class="swiper-slide"><img src="assets/img/guides/guide-award-04.png" alt=""></div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/guides/guide-award-01.png" alt="" style="width: 60%; height: 60%;">
+                </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/guides/guide-award-02.png" alt="" style="width: 60%; height: 60%;">
+                </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/guides/guide-award-03.png" alt="" style="width: 60%; height: 60%;">
+                </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/guides/guide-award-04.png" alt="" style="width: 60%; height: 60%;">
+                </div>
               </div>
             </div>
           </div>
