--- a/dog-details.html
+++ b/dog-details.html
@@ -88,7 +88,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-7">
             <div class="portfolio-details-slider swiper init-swiper">
 
               <script type="application/json" class="swiper-config">
@@ -109,24 +109,19 @@
 
               <div class="swiper-pagination"></div>
               <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dog-1.jpg" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/portfolio/dog-1.jpg" alt="" style="width: 70%; height: 70%;">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dog-2.jpg" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/portfolio/dog-2.jpg" alt="" style="width: 70%; height: 70%;">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dog-3.jpg" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/portfolio/dog-3.jpg" alt="" style="width: 70%; height: 70%;">
                 </div>
-
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
-            <br><br>
+          <div class="col-lg-5"><br><br>
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>【吉祥物 - 阿弟🐾】小檔案</h3>
               <ul>
