--- a/patents-awards.html
+++ b/patents-awards.html
@@ -109,20 +109,22 @@
 
               <div class="swiper-pagination"></div>
               <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="assets/img/patents/PAT-M657972.png" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/patents/PAT-M657972.png" alt="" style="width: 60%; height: 60%;">
                 </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/awards/RD-Performance-Award.png" alt="">
+
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/awards/RD-Performance-Award.png" alt="" style="width: 60%; height: 60%;">
                 </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/awards/Visiting-Scholar.png" alt="">
+
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/awards/Visiting-Scholar.png" alt="" style="width: 60%; height: 60%;">
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4"><br><br>
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Patents & Awards</h3>
               <ul>
