--- a/revitalizations.html
+++ b/revitalizations.html
@@ -109,16 +109,16 @@
 
               <div class="swiper-pagination"></div>
               <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="assets/img/revitalizations/rev-01.jpg" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/revitalizations/rev-01.jpg" alt="" style="width: 60%; height: 60%;">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/revitalizations/rev-02.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/revitalizations/rev-03.jpg" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/revitalizations/rev-03.jpg" alt="" style="width: 60%; height: 60%;">
                 </div>
 
                 <div class="swiper-slide">
@@ -129,8 +129,8 @@
                   <img src="assets/img/revitalizations/rev-05.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/revitalizations/rev-06.jpg" alt="">
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/revitalizations/rev-06.jpg" alt="" style="width: 60%; height: 60%;">
                 </div>
 
                 <div class="swiper-slide">
@@ -140,7 +140,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4"><br><br>
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Regional Revitalizations</h3>
               <ul>
